--- a/.htaccess
+++ b/.htaccess
@@ -12,6 +12,8 @@ RewriteRule ^admin/slider/?$ admin/sliders.php [L]
 RewriteRule ^admin/slider/ekle/?$ admin/slider-edit-page.php [L]
 RewriteRule ^admin/slider/duzenle/([0-9]+)/?$ admin/slider-edit-page.php?id=$1 [L]
 RewriteRule ^admin/sehirler/?$ admin/cities.php [L]
+RewriteRule ^admin/vitrin/?$ admin/vitrin.php [L]
+RewriteRule ^admin/one-cikan-ilanlar/?$ admin/featured-properties.php [L]
 RewriteRule ^admin/ayarlar/?$ admin/settings.php [L]
 RewriteRule ^admin/anasayfa/?$ admin/index.php [L]
 RewriteRule ^admin/?$ admin/index.php [L]
